# cchub

./: README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/claude_md/: manager.rs
src-tauri/src/commands/: claude_md_commands.rs  extra_commands.rs  hook_commands.rs  marketplace_commands.rs  mcp_commands.rs  mod.rs  skill_commands.rs  workflow_commands.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/hooks/: manager.rs
src-tauri/src/mcp/: config.rs  health.rs  registry.rs
src-tauri/src/skills/: installer.rs  scanner.rs  tools.rs
src-tauri/src/workflows/: mod.rs
src-tauri/src/workflows/templates/: api-design.md  bug-diagnosis.md  ci-cd.md  code-generation.md  code-review.md  commit-convention.md  db-migration.md  documentation.md  performance.md  refactoring.md  security-audit.md  tdd.md
src/components/: CodeEditor.tsx  ConfirmDialog.tsx  Toast.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/lib/: appUpdater.ts  configProfiles.ts  i18n.ts
src/pages/: ClaudeMd.tsx  Dashboard.tsx  Hooks.tsx  Logs.tsx  Marketplace.tsx  McpClients.tsx  McpServers.tsx  Profiles.tsx  Security.tsx  Settings.tsx  Skills.tsx  Tools.tsx  Updates.tsx  Workflows.tsx  Workspaces.tsx
src/styles/: globals.css
src/types/: skills.ts
