[package]
name = "cchub"
version = "1.1.2"
edition = "2021"
description = "Claude Code ecosystem management platform"
license = "MIT"

[lib]
name = "cchub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cchub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
thiserror = "2"
toml = "1.0.6"
toml_edit = "0.25.4"
rfd = "0.17.2"
zip = "8.2.0"
tempfile = "3.27.0"
urlencoding = "2.1.3"
flate2 = "1"
tar = "0.4"

[profile.dev]
# Windows/MSVC has hit intermittent linker failures with optimized dev builds
# (`anon.*.llvm.*` unresolved symbols). Keep dev codegen conservative.
opt-level = 0
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
